--- a/index.html
+++ b/index.html
@@ -27,14 +27,40 @@
 </div>
 <div class="details">
   <p class="intro">活动简介</p>
-  <p>会议时间: 2017年8月4日 (周五)</p>
-  <p>会议地点: 北京金隅喜来登酒店 (中国北京市东城区北三环东路36号)</p>
+  <p><span class="font_black">时间 : </span> 2017年8月4日 (周五)</p>
+  <p><span class="font_black">地点 : </span>北京金隅喜来登酒店 (中国北京市东城区北三环东路36号)</p>
+  <!--上午安排-->
+  <div id="a_m">
+  	<p class="font_black">上午</p> 
+  	<div><span>8:00-9:00</span><p>会议入场签到</p></div>
+  	<div><span>9:00-9:05</span><p>致辞开幕：远洋集团副总裁谌祖元</p></div>
+  	<div><span>9:05-9:30</span><p>主题演讲：海鸥II新技术引领工作思路（战略流程中心总经理樊海云）</p></div>
+  	<div><span>9:35-9:55</span><p>主题演讲：WELL标准的智能化实现  （Delos）</p></div>
+  	<div><span>10:00-10:20</span><p>主题演讲：智能驱动，领航未来（联想）</p></div>
+  	<div><span>10:20-10:30 </span><p>茶歇</p></div>
+  	<div><span>10:30-10:50</span><p>主题演讲：人工智能时代,感受科技美好（百度）</p></div>
+  	<div><span>10:55-11:15 </span><p>主题演讲：人工智能，无限可能 （微软）</p></div>
+  	<div><span>11:20-11:40</span><p>主题演讲：区块链创新，IBM与您携手共进 （IBM）</p></div>
+  	<div><span>11:40-12:00</span><p>主题演讲：城市地图（中指研究院）</p></div>
+  	<div><span>12:00-13:30</span><p>自助午餐</p></div>
+  </div>
+  <div id="p_m">
+  	<p class="font_black">下午</p>
+  	<div><span>13:30-14:00</span><p>新技术演示：微软 HOLOLENS</p></div>
+  	<div><span>14:05-15:00</span><p>论坛：新技术应用在房地产中的价值和难题</p></div>
+  	<div><span>15:05-15:40</span><p>演讲及演示：京东物联网及无人车社区快递</p></div>
+  	<div><span>15:40-15:50</span><p>茶歇</p></div>
+  	<div><span>15:50-16:20</span><p>新技术演示：LOHO小区魔镜健身房</p></div>
+  	<div><span>16:20-16:30</span><p>抽奖环节</p></div>
+  	<div><span>16:30-16:50</span><p>远洋设计院演讲：健康 · 建筑 · 科技（远洋集团设计院院长窦志）</p></div>
+  	<div><span>16:50-17:00</span><p>大会闭幕致辞：远洋集团高级副总裁李建波</p></div>
+  </div>
 </div>
 </body>
 
 <script type="text/javascript">
 	function getRTime(){
-		const EndTime= new Date('2017/08/04 08:12:00');
+		const EndTime= new Date('2017/08/04 08:00:00');
 		const NowTime = new Date();
 		const t =EndTime.getTime() - NowTime.getTime();
 
